웹표준 검사 후 수정완료

--- a/user/css/cart.css
+++ b/user/css/cart.css
@@ -27,6 +27,8 @@ h2 {
   align-items: center;
   justify-content: center;
   height: 300px;
+  background: none;
+  box-shadow: none;
 }
 
 .cart_item_del {
